fix images bugs: image heigh stretched

--- a/src/components/Explore/index.sass
+++ b/src/components/Explore/index.sass
@@ -29,6 +29,7 @@
 
   &__image
     width: 100%
+    height: auto
 
   h6
     @include responsive($screen: tablet)
