--- a/src/pages/Portfolio/index.sass
+++ b/src/pages/Portfolio/index.sass
@@ -205,7 +205,7 @@
           font-size: 32px
       img
         max-width: 100%
-        @include responsive($screen: mobile)
+        height: auto
         @include responsive($screen: tablet)
           border-radius: 5px
         @include responsive($screen: desktop)
